test/expected/explain_rf_i.out
explain int (&f)()
             ^
14: error: reference to function is illegal
